# RAGE-HACKATHON-PROYECT

./: .env.example  .env.template  .gitignore  AGENTS.md  QUICKSTART.md  RAGE_comparative_positioning_paper.md  RAGE_paper.md  RAGE_paper_en.md  RAGE_paper_es.md  RAGE_reporte_investigacion_es.md  README.md  ROADMAP.md  decision_engine.py  draft_submission.md  estado-del-arte-deep-research.md  generate_architecture_pdf.py  generate_paper.py  pyproject.toml  training_center_cli.py
.github/workflows/: tests.yml
Documentation/: EVALUATION.md  GREENFIELD_REBUILD_PROMPT.md  MTGUARD_NEW_REPO_PROMPT.md  PRODUCT_BENCHMARK.md  PRODUCT_DEMO.md  PRODUCT_FOUNDATION.md  RAGE-Arquitectura-v2.html  RAGE_JUDGE_FLOW.md  RAGE_V2_PLAN.md  contexto-handoff.md.html  estado-del-arte-deep-research.md.html  generate_architecture_pdf.py.html  owasp-y-estado-del-arte.md.html
Manuales/: README.md  training-center-diagramas.md  training-center-manual.md
Training-Center/: README.md  apply_insights.py  run_campaign.py
Training-Center/crescendo/: __init__.py  attack_generator.py  campaign.py  gateway_factory.py  judge.py  orchestrator.py  reporter.py  scenarios.py  simulated_agent.py
Training-Center/scenarios/: text2sql_ddl.json  text2sql_exfil.json  text2sql_schema_dump.json  text2sql_union_exfil.json
benchmarks/: baseline_locked_v1.json  baseline_locked_v2.json
docs/archive/: RAGE_paper_en.md  README.md  (+1 more)
mac-ollama/: .env.example  README.md  setup.sh  verify-environment.sh
rage_core/: __init__.py  models.py
scripts/: README.md  analyze_bench.py  build_eval_generalization.py  build_eval_open_v3.py  build_eval_practice.py  build_eval_product.py  build_eval_similar.py  build_holdout_scenarios_comparison.py  build_holdout_scenarios_extended.py  calibrate_eval_generalization.py  check_setup.sh  freeze_locked_eval_v1.py  generate_judge_flowchart.py  generate_manual_pdf.py  generate_paper_pdf.py  generate_submission_figures.py  generate_submission_pdf.sh  load-env.sh  probe_generalization_phrasing.py  run-ablation.sh  run-bench-generalization.sh  run-bench-live.sh  run-bench-locked.sh  run-bench-multi-live.sh  run-bench-product.sh  run-demo.sh  run-fp-suite.sh  run-product-demo.sh  run-profile-chat.sh  run-support-chat.sh  run-tests.sh  run_ablation.py  setup-env.sh  update_benchmark_baseline.py  validate-all.sh
submission/: GlobalSouth_RAGE_Submission.md  README.md
tests/: README.md  conftest.py  test_access_policy.py  test_attack_llm_ollama.py  test_auc_metric.py  test_benchmark.py  test_benchmark_locked.py  test_benchmark_locked_v2.py  test_chat_gate.py  test_demo.py  test_env_loader.py  test_gateway.py  test_layers.py  test_ollama_client.py  test_product_benchmark.py  test_semantic_filter.py
windows-ollama/: .env.example  README.md  setup.ps1  verify-environment.ps1
(+136 files in other folders)
