[project]
name = "rage-multiturn"
version = "0.1.0"
description = "RAGE — Multi-turn prompt injection defense with AUC degradation metric"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "openai>=1.30",
]

[project.optional-dependencies]
transformers = [
    "sentence-transformers>=3.0",
]
openai = [
    "openai>=1.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pytest-cov>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pytest-cov>=5.0",
]

[project.scripts]
rage-demo = "rage_core.demo.cli:main"
rage-chat  = "rage_core.demo.chat_cli:main"
rage-chat-support = "rage_core.demo.support_chat_cli:main"
rage-chat-profile = "rage_core.demo.profile_chat_cli:main"
rage-product-demo = "rage_core.demo.product_demo_cli:main"
rage-bench-product = "rage_core.benchmark.product_cli:main"
rage-bench = "rage_core.benchmark.cli:main"
rage-bench-holdout = "rage_core.benchmark.cli:main_holdout"
rage-bench-multi-turn = "rage_core.benchmark.cli:main_multi_turn"

[tool.hatch.build.targets.wheel]
packages = ["rage_core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "dev_eval: calibrated dev datasets — not the official locked_v1 metric",
]
addopts = "-m 'not dev_eval'"

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.uv]
default-groups = ["dev"]
